test/log/conversion/vclip_wv_u16_m.txt
vclip_wv_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vclip_wv_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vclip_wv_u16_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vclip_wv_u16_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vclip_wv_u16_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vclip_wv_u16_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vclip_wv_u16_m.c:22:6: warning: no previous prototype for 'vclip_wv_u16_m_golden' [-Wmissing-prototypes]
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vclip_wv_u16_m.c: In function 'vclip_wv_u16_m_golden':
vclip_wv_u16_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vclip_wv_u16_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vclip_wv_u16_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vclip_wv_u16_m.c:22:37: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |                            ~~~~~~~~~^~~~
vclip_wv_u16_m.c:22:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vclip_wv_u16_m.c:22:70: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vclip_wv_u16_m.c:22:82: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                                        ~~~~~~~~~~^
vclip_wv_u16_m.c:22:94: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                                                    ~~~~~~~~~~^~~~~~~~~~
vclip_wv_u16_m.c: In function 'main':
vclip_wv_u16_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vclip_wv_u16_m.c:15:15: error: subscripted value is neither array nor pointer nor vector
   15 |              a[i] = random(threshold); \
      |               ^
vclip_wv_u16_m.c:44:5: note: in expansion of macro 'data_init'
   44 |     data_init(a, exp_a, 16*2, 0xffffffff);
      |     ^~~~~~~~~
vclip_wv_u16_m.c:16:22: error: subscripted value is neither array nor pointer nor vector
   16 |              b[i] = a[i]; \
      |                      ^
vclip_wv_u16_m.c:44:5: note: in expansion of macro 'data_init'
   44 |     data_init(a, exp_a, 16*2, 0xffffffff);
      |     ^~~~~~~~~
vclip_wv_u16_m.c:48:27: error: incompatible type for argument 1 of 'vclip_wv_u16_m_golden'
   48 |     vclip_wv_u16_m_golden(exp_mask,exp_maskoff,exp_a,exp_b,exp_result);
      |                           ^~~~~~~~
      |                           |
      |                           uint64_t * {aka long long unsigned int *}
vclip_wv_u16_m.c:22:37: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vclip_wv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint32_t *a,uint16_t *b,uint16_t *exp_result) {
      |                            ~~~~~~~~~^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vclip_wv_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vclip_wv_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vclip_wv_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vclip_wv_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed